# renteo

./: .gitignore  CHANGELOG-LEGAL.md  CHANGELOG.md  CLAUDE.md  README.md  TODOS-CONTADOR.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.claude/skills/: chilean-data-privacy.md  chilean-tax-engine.md  disclaimers-and-legal.md  dual-ux-patterns.md  fastapi-supabase-patterns.md  regime-recommendation.md  scenario-simulator.md  sii-integration.md  tax-compliance-guardrails.md  tax-data-model.md  tax-rules-versioning.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  legal-dependencies.yaml  openapi.json  package.json  pyproject.toml
apps/api/src/: config.py  db.py  deps.py  main.py  worker.py
apps/api/src/auth/: internal_admin.py  jwt.py  permissions.py  tenancy.py
apps/api/src/domain/legislation/: monitor.py
apps/api/src/domain/papeles/: builder.py  xlsx.py
apps/api/src/domain/privacy/: compliance_xlsx.py
apps/api/src/domain/security/: custody.py  kms.py  storage.py
apps/api/src/domain/sii/: adapter.py  factory.py  mock_client.py  simpleapi_client.py  wizard_prefill.py
apps/api/src/domain/tax_engine/: alertas.py  beneficios.py  eligibility.py  guardrails.py  idpc.py  igc.py  ppm.py  rule_evaluator.py  rule_resolver.py  snapshot.py
apps/api/src/domain/tax_engine/rule_schemas/: credit_imputation_order.schema.json  palanca_definition.schema.json  recomendacion_whitelist.schema.json  red_flag.schema.json  regime_eligibility.schema.json  rli_formula.schema.json
apps/api/src/lib/: audit.py  errors.py  legal_texts.py  logging.py  observability.py  rule_schema.py  rut.py
apps/api/src/routers/: admin_legislation.py  admin_rules.py  alertas.py  calculations.py  cartera.py  comparador.py  custodia.py  empresas.py  empresas_from_rut.py  encargados.py  legal.py  me.py  papeles.py  privacy.py  privacy_compliance.py  regime.py  scenario.py  sii.py  workspaces.py
apps/api/src/tasks/: alertas.py  legislation.py
apps/api/tests/: conftest.py  test_no_hardcoded.py
apps/api/tests/golden/: __init__.py  test_idpc_golden.py  test_igc_golden.py  test_ppm_golden.py
apps/api/tests/integration/: conftest.py  test_admin_legislation.py  test_admin_rules.py  test_alertas_api.py  test_audit_log.py  test_auth_hook.py  test_calculations_api.py  test_cartera_api.py  test_comparador_api.py  test_custodia.py  test_empresas_api.py  test_empresas_from_rut.py  test_empresas_link.py  test_encargados.py  test_health.py  test_legal_and_guardrails.py  test_papeles_trabajo.py  test_privacy_arcop.py  test_privacy_compliance.py  test_regime_api.py  test_rls_exhaustivo.py  test_rls_isolation.py  test_rule_resolver.py  test_rules_powered_eligibility.py  test_scenario_api.py  test_scenario_palancas_p7_p12.py  test_sii_router.py  test_simulator_topes.py  test_snapshot_immutability.py  test_snapshot_responses.py  test_snapshots_realistic.py  test_wizard_prefill.py  test_worker_alertas.py  test_workspaces_api.py
apps/api/tests/unit/: test_audit_mask.py  test_eligibility_helpers.py  test_kms_storage_roundtrip.py  test_observability.py  test_rule_evaluator.py  test_rut.py  test_sii_mock.py  test_smoke.py
apps/api/tools/: dump_openapi.py  smoke_post_deploy.py  validate_rules.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: golden-flow.spec.ts  landing.spec.ts  login.spec.ts
apps/web/messages/: es-CL.json
apps/web/src/: instrumentation-client.ts  (+1 more)
docs/: DEPLOY.md  DEVELOPMENT.md  REVISION_CONTADOR_SOCIO.md  RUNBOOK.md
supabase/: README.md  config.toml
supabase/migrations/: 20260428120000_init_schemas.sql  20260428120100_core_base.sql  20260428120200_tax_params.sql  20260428120300_tax_data.sql  20260428120400_tax_calc.sql  20260428120500_core_outputs.sql  20260428120600_security_audit.sql  20260428120700_privacy.sql  20260428120800_tax_rules.sql  20260428120900_calc_snapshots.sql  20260428121000_rls_policies.sql  20260429120000_auth_hook.sql  20260502120000_tax_params_placeholder_seeds.sql  20260503120000_escenarios_v2.sql  20260504120000_track_11_seeds.sql  20260505120000_track_11b_simulator_topes.sql  20260506120000_track_1_2_legal_seeds.sql  20260507120000_track_7b_recomendaciones_v2.sql  20260508120000_track_8b_palancas_topes.sql  20260509120000_track_11c_rules_snapshot_hash.sql  20260510120000_alertas_v2.sql  20260511120000_privacy_encargados.sql  20260512120000_sii_sync_log.sql  20260513120000_tighten_snapshot_hash.sql  20260514120000_track_palancas_p7_p12.sql  20260515120000_privacy_rat_dpia.sql  20260516120000_legislative_alerts.sql  _template_tax_rule.sql.example
(+69 files in other folders)
