[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renteo-api"
version = "0.0.0"
description = "Renteo backend — FastAPI + SQLAlchemy 2 + Supabase."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Renteo" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "structlog>=24.1",
    "httpx>=0.27,<1.0",
    "pyjwt[crypto]>=2.9,<3.0",
    "boto3>=1.34",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "sentry-sdk[fastapi]>=2.18,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-boto3",
    "types-pyyaml",
    "types-openpyxl",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S101", # asserts allowed at module level when tests imported as modules
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
# Tax-domain exception names are fixed by skill 10 (IneligibleForRegime,
# RedFlagBlocked, etc.); renaming would break the documented contract.
"src/lib/errors.py" = ["N818"]
# LegalTextNotFound is a 404-equivalent shaped after FileNotFoundError,
# documented public name in skill 2 — N818 false positive.
"src/lib/legal_texts.py" = ["N818"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# FastAPI dependencies (Depends, Query, Path, Body, ...) intentionally appear
# as default arguments — that's the framework's canonical injection pattern,
# not the B008 anti-pattern.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
    "fastapi.Cookie",
]

# ---------------------------------------------------------------------------
# mypy — strict global. domain/** is the contract surface.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "src.domain.*"
strict = true

# boto3 / botocore / celery: reaparecen cuando esos módulos se importen
# en src/ (fase 1+ con KMS adapters y Celery workers). warn_unused_configs
# se quejaría hoy porque ningún archivo del repo importa nada de eso.

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
# Un solo event loop para toda la corrida. El engine global de src.db
# (creado al importar `app`) queda atado al primer loop activo; si cada
# test usa loop propio, las llamadas vía httpx.AsyncClient → FastAPI →
# get_db_session fallan con "Task attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]
markers = [
    "golden: tax-engine golden cases validated by the partner accountant",
    "integration: tests that touch external systems or a real database",
    "rls: row-level-security isolation tests",
]

# ---------------------------------------------------------------------------
# Coverage — fail_under is enforced by CI workflow (phase 0E), not here.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
